// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> disabled renders correctly 1`] = `
.c0 {
  border-radius: 0;
  padding-right: 2rem;
}

<Input
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  className="c0"
  disabled={true}
  is={[Function]}
>
  Options
</Input>
`;

exports[`<Select /> readOnly renders correctly 1`] = `
.c0 {
  border-radius: 0;
  padding-right: 2rem;
}

<Input
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  className="c0"
  is={[Function]}
  readOnly={true}
>
  Options
</Input>
`;

exports[`<Select /> renders correctly 1`] = `
.c0 {
  border-radius: 0;
  padding-right: 2rem;
}

<Input
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  className="c0"
  is={[Function]}
>
  Options
</Input>
`;

exports[`<Select /> underline renders correctly 1`] = `
.c0 {
  border-radius: 0;
  padding-right: 2rem;
}

<Input
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  className="c0"
  is={[Function]}
  underline={true}
>
  Options
</Input>
`;
